adding customizations to the blog

--- a/_config.yml
+++ b/_config.yml
@@ -10,3 +10,7 @@ github_username:  pschloss
 # Build settings
 markdown: kramdown
 permalink: pretty
+
+github:
+  repo:           github.com/mothurblog/mothurblog.github.io
+
