--- a/_config.yml
+++ b/_config.yml
@@ -8,9 +8,10 @@ twitter_username: patschloss
 github_username:  pschloss
 
 # Build settings
-markdown: kramdown
+markdown: redcarpet
+redcarpet:
+  extensions: ["smart", "tables", "no_intra_emphasis", "fenced_code_blocks", "autolink", "strikethrough", "superscript", "with_toc_data"]
 permalink: pretty
 
 github:
   repo:           github.com/mothurblog/mothurblog.github.io
-
